force-app/main/default/objects/VAN_Transactions__c/VAN_Transactions__c.object-meta.xml
<CustomObject>
    <label>VAN Transactions</label>
    <nameField>
        <label>VAN Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAN Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>