force-app/main/default/objects/VAN_Transactions__c/fields/Average_Interchange_bps__c.field-meta.xml
<CustomField>
    <fullName>Average_Interchange_bps__c</fullName>
    <formula>Gross_Interchange__c  /  TTV__c * 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Interchange (bps)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>