force-app/main/default/objects/VAN_Transactions__c/fields/Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fee__c</fullName>
    <label>Bank Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>