force-app/main/default/objects/VAN_Transactions__c/fields/Bank_Fee_pct__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fee_pct__c</fullName>
    <formula>Bank_Fee__c  /  Gross_Interchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Fee (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>