force-app/main/default/objects/VAN_Transactions__c/fields/Client_rebate__c.field-meta.xml
<CustomField>
    <fullName>Client_rebate__c</fullName>
    <label>Client Rebate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>