force-app/main/default/objects/VAN_Transactions__c/fields/Client_Rebate_pct__c.field-meta.xml
<CustomField>
    <fullName>Client_Rebate_pct__c</fullName>
    <formula>Client_rebate__c  /  Gross_Interchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Rebate (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>