force-app/main/default/objects/VAN_Transactions__c/fields/eNett_Margin__c.field-meta.xml
<CustomField>
    <fullName>eNett_Margin__c</fullName>
    <formula>Gross_Interchange__c  -  Bank_Fee__c  -  Referral_fee__c  -  Client_rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eNett Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>