force-app/main/default/objects/VAN_Transactions__c/fields/eNett_Margin_pct__c.field-meta.xml
<CustomField>
    <fullName>eNett_Margin_pct__c</fullName>
    <formula>eNett_Margin__c  /  Gross_Interchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eNett Margin (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>