force-app/main/default/objects/VAN_Transactions__c/fields/Gross_Interchange__c.field-meta.xml
<CustomField>
    <fullName>Gross_Interchange__c</fullName>
    <label>Gross Interchange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>