force-app/main/default/objects/VAN_Transactions__c/fields/Gross_interchange_pct__c.field-meta.xml
<CustomField>
    <fullName>Gross_interchange_pct__c</fullName>
    <formula>Gross_Interchange__c  /  Gross_Interchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Interchange (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>