force-app/main/default/objects/VAN_Transactions__c/fields/Referral_fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_fee__c</fullName>
    <label>Referrer Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>