force-app/main/default/objects/VAN_Transactions__c/fields/Referrer_fee_pct__c.field-meta.xml
<CustomField>
    <fullName>Referrer_fee_pct__c</fullName>
    <formula>Referral_fee__c  /  Gross_Interchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Fee (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>