force-app/main/default/objects/VAN_Transactions__c/fields/TTV__c.field-meta.xml
<CustomField>
    <fullName>TTV__c</fullName>
    <label>TTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>